--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+.env/
 build/
 develop-eggs/
 dist/
@@ -88,3 +89,8 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Other data files and directories
+dividend-analyzer/data
+dividend-analyzer/test-data
+dividend-analyzer/logs
