--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ ENV/
 # Rope project settings
 .ropeproject
 
-# Other data files and directories
-dividend-analyzer/data
-dividend-analyzer/test-data
-dividend-analyzer/logs
+# Dividend analyzer package data files and directories
+dividend_analyzer/data
+dividend_analyzer/test-data
+dividend_analyzer/logs
