Fix file discovery issues for configs

--- a/.gitignore
+++ b/.gitignore
@@ -93,5 +93,5 @@ ENV/
 # Dividend analyzer package data files and directories
 dividend_analyzer/data
 dividend_analyzer/test-data
-dividend_analyzer/logs
-dividend_analyzer/config.ini
+dividend_analyzer/conf/config.ini
+conf/config.ini
